--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,7 +237,7 @@ button,select{
   text-transform:none
 }
 button,[type="button"],[type="reset"],[type="submit"]{
-  -webkit-appearance:button
+  -webkit-appearance: button;
 }
 button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{
   border-style:none;
@@ -253,7 +253,7 @@ legend{
   display:table;
   max-width:100%;
   padding:0;
-  white-space:normal
+  white-space:normal;
 }
 progress{
   vertical-align:baseline
@@ -269,11 +269,11 @@ textarea{
   height:auto
 }
 [type="search"]{
-  -webkit-appearance:textfield;
+  -webkit-appearance: textfield;
   outline-offset:-2px
 }
 [type="search"]::-webkit-search-decoration{
-  -webkit-appearance:none
+  -webkit-appearance: none;
 }
 ::-webkit-file-upload-button{
   -webkit-appearance:button;
