--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -4,43 +4,43 @@
   font-family: bmwTypeNextWeb;
   font-weight: bold;
   src: url(
-    ../fonts/BMWTypeNext-Light.woff2) format("woff2"),url(
-      ../fonts/BMWTypeNext-Light.woff2) format("woff")
+    "../fonts/BMWTypeNext-Light.woff2") format("woff2"),url(
+      "../fonts/BMWTypeNext-Light.woff2") format("woff")
 }
 
 @font-face {
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 400;
-  src: url(../fonts/BMWTypeNext-Regular.woff) format("woff")
+  src: url("../fonts/BMWTypeNext-Regular.woff") format("woff")
 }
 
 @font-face {
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeNext-Bold.woff2) format("woff2"),url(../fonts/BMWTypeNext-Bold.woff) format("woff")
+  src: url("../fonts/BMWTypeNext-Bold.woff2") format("woff2"),url("../fonts/BMWTypeNext-Bold.woff") format("woff")
 }
 
 @font-face {
   font-display: swap;
-  font-family: bmw_next_icons;
+  font-family: "bmw_next_icons";
   font-weight: 300;
-  src: url(../fonts/bmw_next_icons_light.woff2) format("woff2"),url(../fonts/bmw_next_icons_light.woff) format("woff")
+  src: url("../fonts/bmw_next_icons_light.woff2") format("woff2"),url("../fonts/bmw_next_icons_light.woff") format("woff")
 }
 
 @font-face {
   font-display: swap;
-  font-family: bmw_next_icons;
+  font-family: "bmw_next_icons";
   font-weight: 400;
-  src: url(../fonts/bmw_next_icons_regular.woff2) format("woff2"),url(../fonts/bmw_next_icons_regular.woff) format("woff")
+  src: url("../fonts/bmw_next_icons_regular.woff2") format("woff2"),url("../fonts/bmw_next_icons_regular.woff") format("woff")
 }
 
 @font-face {
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeNextLightLatinExtended.woff2) format("woff2"),url(../fonts/BMWTypeNextLightLatinExtended.woff) format("woff");
+  src: url("../fonts/BMWTypeNextLightLatinExtended.woff2") format("woff2"),url("../fonts/BMWTypeNextLightLatinExtended.woff") format("woff");
   unicode-range: u+0100-017f,u+0180-024f
 }
 
@@ -48,7 +48,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 400;
-  src: url(../fonts/BMWTypeNextRegularLatinExtended.woff2) format("woff2"),url(../fonts/BMWTypeNextRegularLatinExtended.woff) format("woff");
+  src: url("../fonts/BMWTypeNextRegularLatinExtended.woff2") format("woff2"),url("../fonts/BMWTypeNextRegularLatinExtended.woff") format("woff");
   unicode-range: u+0100-017f,u+0180-024f
 }
 
@@ -56,7 +56,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeNextBoldLatinExtended.woff2) format("woff2"),url(../fonts/BMWTypeNextBoldLatinExtended.woff) format("woff");
+  src: url("../fonts/BMWTypeNextBoldLatinExtended.woff2") format("woff2"),url("../fonts/BMWTypeNextBoldLatinExtended.woff") format("woff");
   unicode-range: u+0100-017f,u+0180-024f
 }
 
@@ -64,7 +64,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeNextLightGreek.woff2) format("woff2"),url(../fonts/BMWTypeNextLightGreek.woff) format("woff");
+  src: url("../fonts/BMWTypeNextLightGreek.woff2") format("woff2"),url("../fonts/BMWTypeNextLightGreek.woff") format("woff");
   unicode-range: u+0370-03ff
 }
 
@@ -72,7 +72,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 400;
-  src: url(../fonts/BMWTypeNextRegularGreek.woff2) format("woff2"),url(../fonts/BMWTypeNextRegularGreek.woff) format("woff");
+  src: url("../fonts/BMWTypeNextRegularGreek.woff2") format("woff2"),url("../fonts/BMWTypeNextRegularGreek.woff") format("woff");
   unicode-range: u+0370-03ff
 }
 
@@ -80,7 +80,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeNextBoldGreek.woff2) format("woff2"),url(../fonts/BMWTypeNextBoldGreek.woff) format("woff");
+  src: url("../fonts/BMWTypeNextBoldGreek.woff2") format("woff2"),url("../fonts/BMWTypeNextBoldGreek.woff") format("woff");
   unicode-range: u+0370-03ff
 }
 
@@ -88,7 +88,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeNextLightCyrillic.woff2) format("woff2"),url(../fonts/BMWTypeNextLightCyrillic.woff) format("woff");
+  src: url("../fonts/BMWTypeNextLightCyrillic.woff2") format("woff2"),url("../fonts/BMWTypeNextLightCyrillic.woff") format("woff");
   unicode-range: u+04??
 }
 
@@ -96,7 +96,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 400;
-  src: url(../fonts/BMWTypeNextRegularCyrillic.woff2) format("woff2"),url(../fonts/BMWTypeNextRegularCyrillic.woff) format("woff");
+  src: url("../fonts/BMWTypeNextRegularCyrillic.woff2") format("woff2"),url("../fonts/BMWTypeNextRegularCyrillic.woff") format("woff");
   unicode-range: u+04??
 }
 
@@ -104,7 +104,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeNextBoldCyrillic.woff2) format("woff2"),url(../fonts/BMWTypeNextBoldCyrillic.woff) format("woff");
+  src: url("../fonts/BMWTypeNextBoldCyrillic.woff2") format("woff2"),url("../fonts/BMWTypeNextBoldCyrillic.woff") format("woff");
   unicode-range: u+04??
 }
 
@@ -112,7 +112,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeWebLightAllArabic.woff2) format("woff2"),url(../fonts/BMWTypeWebLightAllArabic.woff) format("woff");
+  src: url("../fonts/BMWTypeWebLightAllArabic.woff2") format("woff2"),url("../fonts/BMWTypeWebLightAllArabic.woff") format("woff");
   unicode-range: u+06??,u+fb50-fdff,u+fe70-feff
 }
 
@@ -120,7 +120,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeWebBoldAllArabic.woff2) format("woff2"),url(../fonts/BMWTypeWebBoldAllArabic.woff) format("woff");
+  src: url("../fonts/BMWTypeWebBoldAllArabic.woff2") format("woff2"),url("../fonts/BMWTypeWebBoldAllArabic.woff") format("woff");
   unicode-range: u+06??,u+fb50-fdff,u+fe70-feff
 }
 
@@ -128,7 +128,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeWebLightAllThai.woff2) format("woff2"),url(../fonts/BMWTypeWebLightAllThai.woff) format("woff");
+  src: url("../fonts/BMWTypeWebLightAllThai.woff2") format("woff2"),url("../fonts/BMWTypeWebLightAllThai.woff") format("woff");
   unicode-range: u+0e00-0e7f,u+e000-f8ff
 }
 
@@ -136,7 +136,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeWebBoldAllThai.woff2) format("woff2"),url(../fonts/BMWTypeWebBoldAllThai.woff) format("woff");
+  src: url("../fonts/BMWTypeWebBoldAllThai.woff2") format("woff2"),url("../fonts/BMWTypeWebBoldAllThai.woff") format("woff");
   unicode-range: u+0e00-0e7f,u+e000-f8ff
 }
 
@@ -144,7 +144,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeWebLightAllVietnamese.woff2) format("woff2"),url(../fonts/BMWTypeWebLightAllVietnamese.woff) format("woff");
+  src: url("../fonts/BMWTypeWebLightAllVietnamese.woff2") format("woff2"),url("../fonts/BMWTypeWebLightAllVietnamese.woff") format("woff");
   unicode-range: u+1e??
 }
 
@@ -152,7 +152,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeWebBoldAllVietnamese.woff2) format("woff2"),url(../fonts/BMWTypeWebBoldAllVietnamese.woff) format("woff");
+  src: url("../fonts/BMWTypeWebBoldAllVietnamese.woff2") format("woff2"),url("../fonts/BMWTypeWebBoldAllVietnamese.woff") format("woff");
   unicode-range: u+1e??
 }
 
@@ -160,7 +160,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeNextLightKr.woff2) format("woff2"),url(../fonts/BMWTypeNextLightKr.woff) format("woff");
+  src: url("../fonts/BMWTypeNextLightKr.woff2") format("woff2"),url("../fonts/BMWTypeNextLightKr.woff") format("woff");
   unicode-range: u+ac00-d7a3
 }
 
@@ -168,7 +168,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 500;
-  src: url(../fonts/BMWTypeNextRegularKr.woff2) format("woff2"),url(../fonts/BMWTypeNextRegularKr.woff) format("woff");
+  src: url("../fonts/BMWTypeNextRegularKr.woff2") format("woff2"),url("../fonts/BMWTypeNextRegularKr.woff") format("woff");
   unicode-range: u+ac00-d7a3
 }
 
@@ -176,7 +176,7 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeNextBoldKr.woff2) format("woff2"),url(../fonts/BMWTypeNextBoldKr.woff) format("woff");
+  src: url("../fonts/BMWTypeNextBoldKr.woff2") format("woff2"),url("../fonts/BMWTypeNextBoldKr.woff") format("woff");
   unicode-range: u+ac00-d7a3
 }
 
@@ -184,24 +184,24 @@
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 300;
-  src: url(../fonts/BMWTypeNextProHebrew-Light.woff2) format("woff2"),url(../fonts/BMWTypeNextProHebrew-Light.woff) format("woff");
-  unicode-range: U+0590-U+05FF,U+FB1D-U+FB4F
+  src: url("../fonts/BMWTypeNextProHebrew-Light.woff2") format("woff2"),url("../fonts/BMWTypeNextProHebrew-Light.woff") format("woff");
+  unicode-range: "u+0590-U+05ff,u+fb1d-u+fb4f"
 }
 
 @font-face {
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 500;
-  src: url(../fonts/BMWTypeNextProHebrew-Regular.woff2) format("woff2"),url(../fonts/BMWTypeNextProHebrew-Regular.woff) format("woff");
-  unicode-range: U+0590-U+05FF,U+FB1D-U+FB4F
+  src: url("../fonts/BMWTypeNextProHebrew-Regular.woff2") format("woff2"),url("../fonts/BMWTypeNextProHebrew-Regular.woff") format("woff");
+  unicode-range: "u+0590-u+05ff,u+fb1d-u+fb4f"
 }
 
 @font-face {
   font-display: swap;
   font-family: bmwTypeNextWeb;
   font-weight: 700;
-  src: url(../fonts/BMWTypeNextProHebrew-Bold.woff2) format("woff2"),url(../fonts/BMWTypeNextProHebrew-Bold.woff) format("woff");
-  unicode-range: U+0590-U+05FF,U+FB1D-U+FB4F
+  src: url("../fonts/BMWTypeNextProHebrew-Bold.woff2") format("woff2"),url("../fonts/BMWTypeNextProHebrew-Bold.woff") format("woff");
+  unicode-range: "u+0590-u+05ff,u+fb1d-u+fb4f"
 } 
 
 @font-face {
@@ -228,7 +228,7 @@
   --letter-spacing-eyebrow3: .125rem
 }
 
-[lang=ar],[lang^=ar-] {
+[lang="ar"],[lang^="ar-"] {
   --letter-spacing-eyebrow1: 0;
   --letter-spacing-eyebrow2: 0;
   --letter-spacing-eyebrow3: 0
@@ -242,6 +242,6 @@ body,html {
   font-size: 1pc;
   font-weight: 300;
   line-height: 1.5rem;
-  text-rendering: optimizeSpeed;
+  text-rendering: optimizespeed;
 }
 
