--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,9 +14,8 @@ header nav {
     'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
   gap: 0 2em;
-  margin: auto;
-  max-width: 1264px;
-  height: var(--nav-height);
+  max-width: 1500px;
+  height: 84px;
   padding: 0 1rem;
   font-family: var(--body-font-family);
 }
@@ -32,7 +31,8 @@ header nav[aria-expanded="true"] {
 
 @media (width >= 600px) {
   header nav {
-    padding: 0 2rem;
+    margin: 0 6rem;
+    border-bottom: 1px solid var(--dark-color);
   }
 }
 
@@ -141,15 +141,15 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
+  flex-basis: 0;
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
 }
 
 header nav .nav-brand img {
-  width: 48px;
-  height: auto;
+  width: 52px;
+  height: 52px;
 }
 
 /* sections */
@@ -180,6 +180,7 @@ header nav .nav-sections ul > li {
 
 header nav .nav-sections ul > li > ul {
   margin-top: 0;
+  
 }
 
 header nav .nav-sections ul > li > ul > li {
@@ -225,7 +226,6 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections ul {
     display: flex;
-    gap: 2em;
     margin: 0;
     font-size: var(--body-font-size-xs);
   }
@@ -233,14 +233,38 @@ header nav .nav-sections ul > li > ul > li {
   header nav .nav-sections .default-content-wrapper > ul > li {
     flex: 0 1 auto;
     position: relative;
-    font-weight: 500;
+    font-weight: 700;
+    color:  var(--light-border-color);
+    font-size: 1rem;
+    cursor: pointer;
+  }
+  
+  header nav .nav-sections .default-content-wrapper > ul > li a {
+    padding: 30px 15px;
+    text-decoration: none;
   }
 
+  header nav .nav-sections .default-content-wrapper > ul > li a:hover {
+    border-bottom: .25rem solid var(--light-link-hover-color);
+    color: var( --light-text-color);
+    
+  }
+  
   header nav .nav-sections .default-content-wrapper > ul > li > ul {
     display: none;
     position: relative;
   }
 
+  header nav .nav-tools .default-content-wrapper .icon {
+    cursor: pointer;
+    padding: 30px 15px;
+  }
+
+  header nav .nav-tools .default-content-wrapper .icon:hover {
+    border-bottom: .25rem solid var(--light-link-hover-color);
+    border-top: .25rem solid transparent;
+  }
+  
   header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded="true"] > ul {
     display: block;
     position: absolute;
