--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,9 @@
   --light-color: #eee;
   --dark-color: #ccc;
   --text-color: black;
+  --light-border-color: #666;
+  --light-text-color: #262626;
+  --light-link-hover-color: #1c69d4;
 
   /* fonts */
 
@@ -214,6 +217,7 @@ main .section {
   main .section {
     padding: 64px 32px;
   }
+  
 }
 
 /* desktop */
