--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -297,6 +297,8 @@ header nav .nav-sections ul > li > ul > li {
   header nav .nav-tools .default-content-wrapper .icon {
     cursor: pointer;
     padding: 30px 15px;
+    width: 20px;
+    height: 20px;
   }
 
   header nav .nav-tools .default-content-wrapper .icon:hover {
