pushing footer-section js and css changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@
   --light-border-color: #666;
   --light-text-color: #262626;
   --light-link-hover-color: #1c69d4;
+  --light-grey: #f6f6f6;
 
   /* fonts */
 
