--- a/blocks/bmw-iframe/bmw-iframe.css
+++ b/blocks/bmw-iframe/bmw-iframe.css
@@ -7,14 +7,14 @@ main .bmw-iframe-container > div {
 }
 
 .loader {
-  border: 10px solid --background-color;
+  border: 10px solid white;
   position: absolute;
   top: 50%;
   left: 50%;
   height: 50px;
   width: 50px;
-  border-top-color: --text-color;
-  border-bottom-color: --text-color;
+  border-top-color: black;
+  border-bottom-color: black;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
