--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -28,36 +28,31 @@ header nav[aria-expanded="true"] {
   align-items: baseline;
 }
 
-/* IPAD */
-@media (width >= 600px) {
-  header nav {
-    margin: 0 6rem;
-    border-bottom: 1px solid var(--dark-color);
-  }
-
-}
-
-/* Desktop  */
-@media (width >= 900px) {
-  header nav {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  header nav[aria-expanded="true"] {
-    min-height: 0;
-    overflow: visible;
-    align-items: center;
-  }
-
-}
-
 /* Mobile */
 
 @media (width < 600px) {
-  header nav .nav-tools .default-content-wrapper .icon-location {
+  header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-location {
     display: none;
   }
+
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-location {
+    position: absolute;
+    right: 85px;
+    top: 33px;
+  }
+
+  header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-search {
+    position: absolute;
+    right: 55px;
+    top: 33px;
+  }
+
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-search {
+    position: absolute;
+    right: 55px;
+    top: 33px;
+  }
+ 
 
   header .nav-wrapper {
     position: relative;   
@@ -75,39 +70,186 @@ header nav[aria-expanded="true"] {
 
   header nav[aria-expanded="true"] .bmw-logo-wrapper {
   position: relative;
-  top: 20px;
+  top: 25px;
   }
+
+  header nav[aria-expanded="false"] .bmw-logo-wrapper {
+    position: relative;
+    top: 2px;
+    }
 
   header nav .nav-brand img {
     width: 36px;
     height: 36px;
   }
 
-  header nav[aria-expanded="true"] .nav-sections {
-    position: relative;
-    top: 65px;
+  header nav[aria-expanded="true"] {
+    border-bottom: 1px solid var(--light-bbb);
   }
 
-  header nav[aria-expanded="false"] {
-    border-bottom: 2px solid #666;
+  header nav[aria-expanded="true"] .icon.icon-search {
+    position: absolute;
+    right: 65px;
+    top: 30px
   }
 
+  header nav[aria-expanded="true"] .nav-hamburger {
+    position: absolute;
+    right: 27px;
+    top: 30px;
+  }
+ 
+  
   header .section.nav-tools .icon img {
     height: 20px;
     width: 20px;
-  }
-
-  header nav[aria-expanded="false"] .section.nav-tools .icon img {
-    position: relative;
-    left: 125px;
-    top: 3px;
   }
 
   header nav[aria-expanded="true"] .section.nav-tools .icon img {
     left: 125px;
     top: 3px;
   }
+
+  header nav .nav-sections .default-content-wrapper ul li {
+    padding: 12px 0;
+    color: var(--light-border-color);
+  }
+
+  header nav .nav-sections .default-content-wrapper .button-container a.button {
+    color:  var(--light-border-color);
+    background-color: transparent;
+    padding: 12px 0;
+    margin: 0;
+  }
+
+  header nav .nav-sections ul {
+    margin: 30px 0 0;
+  }
+
+  .section.nav-sections {
+    position: absolute;
+    top: 80px;
+    width: 100%;
+    left: 0;
+    padding: 20px 50px;
+    border-top: 1px solid #ddd;
+  }
 }
+
+/* IPAD */
+@media (width >= 600px ) {
+  header nav {
+    margin: 0 3rem;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  header nav .nav-brand img {
+    width: 36px;
+    height: 36px;
+  }
+  
+  header .nav-wrapper {
+    position: relative;   
+  }
+
+  .nav-hamburger {
+   order: 2;
+  }
+
+  /* header nav[aria-expanded="true"] .section.nav-sections {
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    left: 0;
+    padding: 0 65px;
+    border-top: 1px solid #ddd;
+  } */
+
+  header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-search {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 90px;
+  top: 33px;
+  }
+
+  header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-location {
+   display: none;
+  }
+
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-location {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: 135px;
+    top: 30px;
+  }
+
+  header nav[aria-expanded="true"] .bmw-logo-wrapper .bmw-logo img {
+    position: absolute;
+  }
+
+  header nav[aria-expanded="true"] .nav-hamburger-icon {
+    top: 29px;
+    width: 20px;
+  }
+ 
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-search {
+    position: absolute;
+    right: 90px;
+    top: 30px;
+    width: 20px;
+    height: 20px;
+  }
+
+
+}
+
+/* Desktop  */
+@media (width >= 900px) {
+  header nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 6rem;
+    border-bottom: 1px solid var(--dark-color);
+  }
+
+  header nav[aria-expanded="true"] {
+    min-height: 0;
+    overflow: visible;
+    align-items: center;
+  }
+
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-location {
+    position: relative;
+    right: 0;
+    top: 0;
+  }
+
+  header nav[aria-expanded="true"] .bmw-logo-wrapper .bmw-logo img {
+    position: relative;
+  }
+
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-search {
+    position: relative;
+    right: 0;
+    top: 0; 
+  }
+
+  /* header nav[aria-expanded="true"] .section.nav-sections {
+    position: absolute;
+    top: 0;
+    background-color: transparent;
+    width: 100%;
+    left: 120px;
+    padding: 0 45px;
+    border-top: none;
+  } */
+}
+
+
 
 header nav p {
   margin: 0;
@@ -133,7 +275,7 @@ header nav .nav-hamburger button {
   border-radius: 0;
   padding: 0;
   background-color: var(--background-color);
-  color: inherit;
+  color: #666;
   overflow: initial;
   text-overflow: initial;
   white-space: initial;
