--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,3 @@
-footer .footer {
-  padding: 30px;
-}
-
 footer .footer p {
   font-size: .75rem;
   font-weight: 300;
@@ -28,7 +24,12 @@ footer .horizontal-link-text ul {
   margin-bottom: 0;
 }
 
-footer .horizontal-link-text-wrapper .horizontal-link-text>div>div,
+footer .horizontal-link-text-wrapper .horizontal-link-text>div>div {
+  display: flex;
+  align-items: baseline;
+  flex-wrap: nowrap;
+}
+
 footer .horizontal-link-text .columns-wrapper ul {
   display: flex;
   align-items: baseline;
@@ -277,7 +278,6 @@ footer .footer-grey-bg{
 }
 
 footer .footer .section{
-  width: 100%;
   padding: 32px 48px;
 }
 
