css for header and white svg updated

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -113,7 +113,10 @@ header nav[aria-expanded="true"] {
   header nav .nav-sections .default-content-wrapper ul li {
     padding: 12px 0;
     color: var(--light-border-color);
+    font-size: 16px;
   }
+
+  
 
   header nav .nav-sections .default-content-wrapper .button-container a.button {
     color:  var(--light-border-color);
@@ -131,16 +134,15 @@ header nav[aria-expanded="true"] {
     top: 80px;
     width: 100%;
     left: 0;
-    padding: 20px 50px;
-    border-top: 1px solid #ddd;
+    padding: 0 50px;
+    border-top: 1px solid var(--light-bbb);
   }
 }
 
 /* IPAD */
 @media (width >= 600px ) {
   header nav {
-    margin: 0 3rem;
-    padding: 0;
+    padding: 0 3rem;
     display: flex;
     justify-content: space-between;
   }
@@ -212,7 +214,7 @@ header nav[aria-expanded="true"] {
   header nav {
     display: flex;
     justify-content: space-between;
-    margin: 0 6rem;
+    padding: 0 6rem;
     border-bottom: 1px solid var(--dark-color);
   }
 
@@ -533,3 +535,7 @@ header nav .nav-sections ul > li > ul > li {
 header nav .nav-tools {
   grid-area: tools;
 }
+
+
+
+
