--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,7 @@
   --light-text-color: #262626;
   --light-link-hover-color: #1c69d4;
   --light-grey: #f6f6f6;
+  --light-bbb: #bbb;
 
   /* fonts */
 
