--- a/blocks/bmw-iframe/bmw-iframe.css
+++ b/blocks/bmw-iframe/bmw-iframe.css
@@ -2,10 +2,6 @@ main .bmw-iframe-container > div {
   max-width: unset;
 }
 
-.iframe-container {
-  position: relative;
-}
-
 .loader {
   border: 10px solid transparent;
   position: absolute;
@@ -32,5 +28,5 @@ main .bmw-iframe-container > div {
 iframe {
   display: block;
   width: 100%;
-  height: 550px;
+  height: 100vh;
 }
