--- a/blocks/bmw-iframe/bmw-iframe.css
+++ b/blocks/bmw-iframe/bmw-iframe.css
@@ -1,5 +1,11 @@
+main .section.bmw-iframe-container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 main .bmw-iframe-container > div {
   max-width: unset;
+  
 }
 
 .loader {
