--- a/blocks/bmw-iframe/bmw-iframe.css
+++ b/blocks/bmw-iframe/bmw-iframe.css
@@ -8,9 +8,13 @@ main .bmw-iframe-container > div {
   
 }
 
+.iframe-container{
+  position: relative;
+}
+
 .loader {
   border: 10px solid transparent;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   height: 50px;
