--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -142,19 +142,27 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     background-color: transparent;
     padding: 12px 0;
     margin: 0;
+    font-weight: 700;
+    line-height: 24px;
   }
 
-  header nav .nav-sections ul {
-    margin: 30px 0 0;
+  header nav .nav-sections ul, header nav .nav-sections p {
+    width: 83.3333%;
+    margin: 0 auto;
   }
 
   .section.nav-sections {
+    height: calc(100vh - 69px);
+    overflow: auto;
     position: absolute;
     top: 80px;
     width: 100%;
     left: 0;
-    padding: 0 50px;
     border-top: 1px solid var(--light-bbb);
+  }
+
+  .header nav .nav-sections .default-content-wrapper {
+    padding: 1.75rem 1.5rem 0;
   }
 
   header.white-background .claim-container{
@@ -185,11 +193,16 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
 
   header nav[aria-expanded="true"] .section.nav-sections {
     position: absolute;
+    height: calc(100vh - 85px);
+    overflow: auto;
     top: 100px;
     width: 100%;
     left: 0;
-    padding: 0 65px;
     border-top: 2px solid #ddd;
+  }
+  
+  header nav .nav-sections .default-content-wrapper {
+    padding: 1.75rem 3rem 0;
   }
   
   header nav .nav-sections .default-content-wrapper .button-container a.button {
@@ -197,6 +210,8 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     background-color: transparent;
     padding: 12px 0;
     margin: 0;
+    font-weight: 700;
+    line-height: 24px;
   }
 
   header nav .nav-sections .default-content-wrapper ul li {
@@ -207,6 +222,11 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
 
   header nav .nav-sections ul {
     margin-bottom: 0;
+  }
+
+  header nav .nav-sections ul, header nav .nav-sections p {
+    width: 66.6667%;
+    margin: 0 auto;
   }
 
   header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-search {
@@ -286,6 +306,8 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
   header nav[aria-expanded="true"] .section.nav-sections {
     position: absolute;
     top: 0;
+    height: unset;
+    overflow:unset;
     background-color: transparent;
     width: auto;
     left: 120px;
@@ -514,6 +536,7 @@ header nav .nav-sections ul > li > ul > li {
   
   header nav .nav-sections .default-content-wrapper {
     display: flex;
+    padding: 0;
   }
   
   header nav .nav-sections .default-content-wrapper .button-container a.button {
